tests/fixtures/invalid/bool_bitand_float.py
# Cannot bitwise AND Bool and Float
x: float = True & 1.0
